--- a/RecGlobe/app/src/main/res/layout/item.xml
+++ b/RecGlobe/app/src/main/res/layout/item.xml
@@ -14,13 +14,17 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="520dp"
+        android:layout_width="wrap_content"
+        android:background="@drawable/rounded_corners"
+        android:layout_height="540sp"
         android:layout_gravity="center"
-        android:elevation="2dp">
+        android:elevation="2dp"
+        android:paddingLeft="20sp"
+        android:paddingRight="20sp"
+        android:paddingBottom="20sp">
 
         <RelativeLayout
-            android:layout_width="300dp"
+            android:layout_width="400dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:orientation="vertical">
@@ -34,7 +38,8 @@
                 android:paddingLeft="20sp"
                 android:textColor="@android:color/black"
                 android:textSize="30sp"
-                tools:text="name" />
+                android:textStyle="bold"
+                android:text="name" />
 
 
             <ImageView
@@ -46,10 +51,10 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_gravity="center"
-                android:layout_marginStart="0dp"
-                android:layout_marginLeft="0dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginTop="45dp"
-                android:layout_marginEnd="3dp"
+                android:layout_marginEnd="50dp"
                 android:layout_marginRight="0dp"
                 android:paddingTop="40dp"
                 android:paddingBottom="10dp"
@@ -63,34 +68,34 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginLeft="0dp"
-                android:layout_marginBottom="153dp"
+                android:layout_marginStart="42dp"
+                android:layout_marginLeft="42dp"
+                android:layout_marginBottom="171dp"
                 android:paddingLeft="20sp"
                 android:paddingRight="0dp"
+                android:text="UTR:"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:text="UTR:" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/utr"
-                android:layout_width="207dp"
+                android:layout_width="198dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="83dp"
-                android:layout_marginLeft="83dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginBottom="153dp"
+                android:layout_marginStart="133dp"
+                android:layout_marginLeft="133dp"
+                android:layout_marginEnd="69dp"
+                android:layout_marginRight="69dp"
+                android:layout_marginBottom="169dp"
                 android:paddingLeft="20sp"
+                android:text="UTR"
                 android:textColor="@android:color/black"
-                android:textSize="17sp"
-                android:text="UTR" />
+                android:textSize="17sp" />
 
             <TextView
                 android:id="@+id/natranklabel"
@@ -99,14 +104,14 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginLeft="0dp"
-                android:layout_marginBottom="123dp"
+                android:layout_marginStart="42dp"
+                android:layout_marginLeft="42dp"
+                android:layout_marginBottom="139dp"
                 android:paddingLeft="20sp"
+                android:text="National Ranking:"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:text="National Ranking:" />
+                android:textStyle="bold" />
 
 
             <TextView
@@ -116,40 +121,41 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="170dp"
-                android:layout_marginLeft="170dp"
-                android:layout_marginBottom="122dp"
+                android:layout_marginStart="219dp"
+                android:layout_marginLeft="219dp"
+                android:layout_marginBottom="139dp"
                 android:paddingLeft="20sp"
+                android:text="natrank"
                 android:textColor="@android:color/black"
-                android:textSize="17sp"
-                android:text="natrank" />
+                android:textSize="17sp" />
 
             <TextView
                 android:id="@+id/biolabel"
-                android:layout_width="113dp"
+                android:layout_width="114dp"
                 android:layout_height="25dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="94dp"
+                android:layout_marginLeft="42dp"
+                android:layout_marginBottom="106dp"
                 android:paddingLeft="20sp"
+                android:text="Bio:"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:text="Bio:" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/bio"
-                android:layout_width="match_parent"
-                android:layout_height="89dp"
+                android:layout_width="272dp"
+                android:layout_height="94dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginLeft="0dp"
+                android:layout_marginLeft="42dp"
                 android:layout_marginBottom="0dp"
                 android:paddingLeft="20sp"
+                android:text="Bio"
                 android:textColor="@android:color/black"
-                android:textSize="17sp"
-                android:text="Bio" />
+                android:textSize="17sp" />
+
 
 
         </RelativeLayout>
